media/css/v1.scss
/* ... */
#teams.video-feed .content {

    h2 {
        margin: 1em 0 0 0;
    }

    .title {
        text-align: left;
        padding: 1em 0 1em 1em;
        border-bottom: 1px solid #e8ebed;
        clear: both;

        h1 {
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
            margin: 0 0 0.2em 0;
        }

        .actions {
            float: right;
            margin-left: 6px;

            form {
                margin-bottom: 12px;
                padding: 0;
            }
            a.button {
                display: block;
                margin: 0;
            }
        }
    }


    div.submit {
         margin: 0;
         border: none;
         display: inline;
    }

    .listing li.video {
        width: 288px;
        float: left;
        padding: 1em 11px;
        border: none;

        a {
            display: block;
            color: #eee;
            position: relative;
        }

        img {
            width: 288px;
            height: 162px;
        }

        h4 {
            position: absolute;
            bottom: 0;
            left: 0;
            right: 0;
            padding: 1em 10px;
            background: rgba(0,0,0,.65);
        }
    }

}


#error {

    h1 {
        font-size: 3em;
        padding: .75em 0 .25em;
    }
    p {
        margin: 1em 0;
        line-height: 175%;
    }
}

#error-page {
    h1 {
        font-size: 2em;
        padding: 0.75em 0 1em;
        font-weight: bold;
    }

    p {
        font-size: 1.4em;
    }
}
.messages.v1 .view {
    border-top: 1px solid $fainter;
    margin-left: 0;
    padding-left: 10px;
}
.messages.v1 .context {
    padding-top: 1em;

    .selected a {
        font-weight: bold;
    }
}

.account-type-copy {
    display: none;
}

#youtube-prompt {
    position: relative;
    margin: 2em 0 3em;
    padding: 2em 200px 2em 185px;
    background: #f2f2f2;
    @include border-radius(2px);

    img {
        position: absolute;
        top: 50%;
        left: 2em;
        height: 50px;
        margin-top: -25px;
    }

    h2 {
        margin: 0;
    }

    p {
        font-size: 14px;
        color: #AF2B26;
    }

    ul {
        position: absolute;
        top: 2em;
        right: 2em;

        li {
            padding-bottom: .5em;
        }

        a.proceed, a.proceed:visited, a.proceed:hover {
            display: block;
            background-color: $usblue;
            border: 1px solid #0c4a70;
            color: #fff;
            cursor: pointer;
            font-size: 14px;
            padding: .5em;
            text-align: center;
            text-decoration: none;
            text-shadow: 1px 1px 1px #0c4a70;
            @include border-radius(3px);
            @include vertical-gradient(#136aa1, $usblue);
        }

        a.hide {
            display: block;
            text-align: right;
        }
    }
}

#video_set_language {
    label, h5 {
        font-size: 13px;
        font-weight: bold;
        margin-bottom: .5em;
        padding-top: 0;
    }

    .notation {
        margin: -.5em 0 1.5em;
    }

    form {
        padding: 0;
    }

    fieldset {
        padding-bottom: 1.5em;
    }
}

.video-item {
    height: 180px;
    overflow: hidden;
    position: relative;
    top: 0;

    h4 a {
        display: block;
        position: absolute;
        @include border-box();
        bottom: 0; left: 0;
        padding: 1em;
        width: 290px;
        background: rgba(0,0,0,.65);
        color: #fff;
        text-decoration: none;

        span.duration {
            position: absolute;
            top: 12px;
            right: 12px;
            font-weight: normal;
            font-size: 10px;
        }
    }

    &:hover h4 a {
        background: rgba(0,0,0,.75);
    }

    a img {
        width: 290px;
        height: 180px;
        border: none;
    }
}

#security p {
    margin-bottom: 1em;
}

#security h3 {
    margin-top: 2em;
}

.v1 form {
    table.simple-list, th, td {
        border: 1px solid #DCE2E5;
        tr.recent {
            background-color: #EAEAEA;
        }
        th {
            border: 1px solid #DCE2E5;
            padding: 10px;
            font-weight: bold;
        }
        td {
            border: 1px solid #DCE2E5;
        }
    }
}

.v1 div.view div h3 {
    padding: 30px 0 10px 0;
}

.v1 .one-line-summary {
    max-width: 200px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}
.v1 .current-languages {
    padding-top: 30px;
    span {
        padding-right: 15px;
    }
}

.v1 #apply-modal.modal {
    overflow: auto;
    max-height: 750px;
}

